Fix token icon resize and ledger keys gap in onboarding

--- a/src/popup/modules/main/components/UserAssets/components/AssetListItem/AssetListItem.module.scss
+++ b/src/popup/modules/main/components/UserAssets/components/AssetListItem/AssetListItem.module.scss
@@ -19,10 +19,12 @@
 
 .logo {
     @include styles.size(32px);
+    min-width: 32px;
 }
 
 .left {
     flex-grow: 1;
+    min-width: 100px;
 }
 
 .amount {
