--- a/src/popup/modules/onboarding/components/LedgerAccountSelector/LedgerAccountSelector.module.scss
+++ b/src/popup/modules/onboarding/components/LedgerAccountSelector/LedgerAccountSelector.module.scss
@@ -2,7 +2,8 @@
 
 .list {
     display: grid;
-    gap: 16px;
+    column-gap: 16px;
+    row-gap: 8px;
     grid-auto-flow: column;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
